--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>policy-pal-switcher-ui</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <meta name="description" content="policy-pal" />
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="policy-pal-switcher-ui" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Policy-pal" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEZy7OZgE4Og_jlqa9VXlrx6DMwYs-p-gXow&s" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content=" " />
+    <meta name="twitter:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEZy7OZgE4Og_jlqa9VXlrx6DMwYs-p-gXow&s" />
   </head>
 
   <body>
